--- a/BlazorEcommerce/Client/Shared/ProductList.razor
+++ b/BlazorEcommerce/Client/Shared/ProductList.razor
@@ -3,7 +3,7 @@
 
 @if(ProductService.Products == null || ProductService.Products.Count ==0)
 {
-    <span>Loading Products...</span>
+    <span>@ProductService.Message</span>
 }
 else{
     <ul class="list-unstyled">
@@ -27,6 +27,13 @@ else{
            </li>
        }
     </ul>
+    for (var i = 1; i <= ProductService.PageCount; i++)
+    {
+        <a class="btn
+                @(i == ProductService.CurrentPage ? "btn-info" : "btn-outline-info")
+                page-selection"
+                href="/search/@ProductService.LastSearchText/@i">@i</a>
+    }
 }
 @code {
     protected override void OnInitialized()
@@ -39,7 +46,7 @@ else{
         ProductService.ProductsChanged -= StateHasChanged;
     }
 
-    public string GetPriceText(Product product)
+    private string GetPriceText(Product product)
     {
         var variants = product.Variants;
         if (variants.Count == 0)
