--- a/BlazorEcommerce/Client/_Imports.razor
+++ b/BlazorEcommerce/Client/_Imports.razor
@@ -11,3 +11,8 @@
 @using BlazorEcommerce.Shared
 @using BlazorEcommerce.Client.Services.ProductService
 @using BlazorEcommerce.Client.Services.CategoryService
+@using BlazorEcommerce.Client.Services.CartService
+@using BlazorEcommerce.Client.Services.AuthService
+@using Blazored.LocalStorage
+@using Microsoft.AspNetCore.Components.Authorization
+@using Microsoft.AspNetCore.Authorization
